# Cassava_Ethanol

./: .gitignore  README.md  REVIEW.md  fallback_model.py  generate_model.py  pyproject.toml  requirements.txt  streamlit_app.py
bioethanol_model/: __init__.py  advanced_tools.py  exporter.py  financial_model.py  increment.py  inputs.py  integrated_cycle.py  scenario.py  schedules.py  sensitivity.py  utils.py
cassava_ethanol/: __init__.py  cli.py  inputs.py  model.py  report.py  scenario.py
docs/: INVESTOR_READINESS_REVIEW.md  OFFLINE_SETUP.md
examples/: base_config.yaml  sample_scenarios.yaml
numpy/: __init__.py
tests/: test_cost_tables.py  test_financial_model.py  test_increment_helper.py  test_inflation_compounding.py  test_initial_investment_metrics.py  test_input_page_rehydration.py  test_integrated_cycle.py  test_investor_recommendations_integration.py  test_loan_amortisation.py  test_model.py  test_monte_carlo.py  test_runtime_contract.py  test_scenario_parameters.py  test_streamlit_editor.py  test_streamlit_hero.py  test_working_capital_schedule.py  test_yearly_increment_integration.py
tools/: diagnostics_baseline.json  numpy_stub.py  run_checks.py
